welcome.lessons.welcome.summative.Moria.scala.code
def moria() 
	{
    	while (!estFaceMur()&& !estSurBiscuit)
    		{
          if (getDirection() == Direction.EAST )
          	{
              while(!estSurBiscuit())
              	{avance()}
              droite()
              droite()
              
            
          prendBiscuit()
          while(!estSurBiscuit())
              	{avance()}
          recule()
          poseBiscuit()
          droite()
          droite()
            }
         else
          	{
              droite() 
              droite()
            }
        }
			droite()
    avance()
    gauche()
    avance()
  }

	